# UniGrowth-Benchmar

./: .gitignore  Profiles_Data.xlsx  Profiles_Data_250425.xlsx  README.md  parsing_4icu_org.ipynb
location/: README.md  logger.py  main.py  pyproject.toml  settings.py
location/config/: logger.py  settings.py
location/fixtures/: Profiles_Data_060525.xlsx
location/outputs/: universities_coordinates.xlsx
location/outputs/cache/: cache.json
location/parser/: cache.py  excel_file.py  location_parser.py
