[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "parser"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
requests = "^2.32.3"
pydantic-settings = "^2.9.1"
flake8 = "^7.2.0"
aiohttp = "^3.11.18"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"